Traduction page des messages

--- a/fr.lproj/Localizable.strings
+++ b/fr.lproj/Localizable.strings
@@ -14,4 +14,6 @@
 "Connexion" = "Connexion";
 "Deconnexion" = "Deconnexion";
 "Souscrire" = "Souscrire";
-
+"Entrez un message" = "Entrez un message";
+"Gestion des capteurs" = "Gestion des capteurs";
+"Envoyer" = "Envoyer";
