--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -14,4 +14,6 @@
 "Connexion" = "Connection";
 "Deconnexion" = "Deconnection";
 "Souscrire" = "Subscribe";
-
+"Entrez un message" = "Enter a message";
+"Gestion des capteurs" = "Sensor management";
+"Envoyer" = "Send";
