--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -17,3 +17,7 @@
 "Entrez un message" = "Enter a message";
 "Gestion des capteurs" = "Sensor management";
 "Envoyer" = "Send";
+"Authentification" = "Authentification";
+"Utilisateur" = "User";
+"Mot de passe" = "Password";
+
