--- a/fr.lproj/Localizable.strings
+++ b/fr.lproj/Localizable.strings
@@ -17,3 +17,6 @@
 "Entrez un message" = "Entrez un message";
 "Gestion des capteurs" = "Gestion des capteurs";
 "Envoyer" = "Envoyer";
+"Authentification" = "Authentification";
+"Utilisateur" = "Utilisateur";
+"Mot de passe" = "Mot de passe";
