--- a/fr.lproj/Localizable.strings
+++ b/fr.lproj/Localizable.strings
@@ -20,3 +20,4 @@
 "Authentification" = "Authentification";
 "Utilisateur" = "Utilisateur";
 "Mot de passe" = "Mot de passe";
+"Réglages" = "Réglages";
